# pymafe

./: README.md  example.py  pymafe.ipynb  setup.cfg  stockData.py  strategy.py
pymafe/: pymafe.py
