[metadata]
# replace with your username:
name = pymafe
version = 0.0.4
author = wpkpy
author_email = ponggung1986@example.com
description = A Profit-Loss Analysis Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ponggung/pymafe
project_urls =
    Bug Tracker = https://github.com/ponggung/pymafe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7