[metadata]
# replace with your username:
name = pymafe
version = 0.0.4
author = l12203685
author_email = l12203685@gmail.com
description = A Trading Strategy Analysis Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/l12203685/pymafe
project_urls =
    Bug Tracker = https://github.com/l12203685/pymafe/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
